--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  margin: 0;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
+}
+
+.header {
+  padding: 1rem;
+  background-color: white;
   display: flex;
-  flex-direction: column;
+  gap: 1rem;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  color: black;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  h1 {
+    font-size: 2.5rem;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.sun-animation {
+  width: 6rem;
+}
+
+.search-bar-container {
+  width: 100%;
+  background: #5a287d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-location {
+  margin: 1rem;
+
+  h2{
+    font-size: 1.5rem;
+  }
+}
+
+.content-container {
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.weather-container {
+  margin: 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.weather-card-list {
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 1024px) {
+  .weather-container {
+    flex-direction: column;
+  }
+
+  .weather-card-list {
+    flex-direction: column;
+  }
+}
+
+#footer {
+  width: 100%;
+  min-height: 50px;
+  background-color: #5a287d;
+  color: white;
+
+  p {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+  
+  a {
+  font-weight: bold;
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: white;
   }
 }
