--- a/src/components/WeatherCardSimplified.css
+++ b/src/components/WeatherCardSimplified.css
@@ -5,7 +5,7 @@
 
 .forecast-card:hover {
   transform: scale(1.2);
-  box-shadow: 0 10px 0 #5a287d;
+  box-shadow: 0 10px 0 #6f83ce;
 }
 
 .forecast-info {
